--- a/bangkera.html
+++ b/bangkera.html
@@ -233,7 +233,7 @@ select option {
             <span>Home</span>
         </button>
     </div>
-    <h1>Bangkera Video Player</h1>
+    <h1>Bangkera</h1>
     <div class="logo-area"></div> <!-- Empty for symmetry -->
 </div>
 
