--- a/bangkera.html
+++ b/bangkera.html
@@ -283,7 +283,7 @@ homeBtn.addEventListener("click", function() {
     alert("Navigating to Homepage...\n\nIn a real application, this would redirect to the main site homepage.");
     
     // You can replace the alert with actual navigation:
-    // window.location.href = "https://yourwebsite.com";
+    // window.location.href = "https://watch.boldilocks.xyz/";
 });
 
 // =========================
