--- a/bangkera.html
+++ b/bangkera.html
@@ -275,15 +275,11 @@ const speedSelect = document.getElementById("speed");
 let wakeLock = null;
 
 // =========================
-// ⭐ Home Button Functionality
+// ⭐ Home Button Functionality - FIXED
 // =========================
 homeBtn.addEventListener("click", function() {
-    // In a real application, this would navigate to the homepage
-    // For this demo, we'll simulate a home action
-    alert("Navigating to Homepage...\n\nIn a real application, this would redirect to the main site homepage.");
-    
-    // You can replace the alert with actual navigation:
-    // window.location.href = "https://watch.boldilocks.xyz/";
+    // Remove the alert and uncomment the actual navigation line
+    window.location.href = "https://watch.boldilocks.xyz/";
 });
 
 // =========================
