--- a/undergrads.html
+++ b/undergrads.html
@@ -3,6 +3,7 @@
 <head>
     <script>(function(s){s.dataset.zone='10293073',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 <meta charset="UTF-8">
+    <title>Undergrads</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 /* Reset and Base Styles */
