--- a/bigayhilig.html
+++ b/bigayhilig.html
@@ -4,7 +4,7 @@
     <script>(function(s){s.dataset.zone='10293073',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bangkera - Professional Video Player</title>
+<title>Bigay Hilig</title>
 <style>
 /* Reset and Base Styles */
 * {
