--- a/init.html
+++ b/init.html
@@ -4,7 +4,7 @@
     
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dilig</title>
+<title>Init</title>
 <style>
 /* Reset and Base Styles */
 * {
