--- a/angkapitbahay.html
+++ b/angkapitbahay.html
@@ -446,7 +446,7 @@ select option {
                 <span>Home</span>
             </button>
         </div>
-        <h1>Akin ang Gabi</h1>
+        <h1>Ang Kapitbahay</h1>
         <div class="logo-area"></div> <!-- Empty for symmetry -->
     </div>
 
