--- a/nextroomaffair.html
+++ b/nextroomaffair.html
@@ -280,7 +280,7 @@ let wakeLock = null;
 // =========================
 homeBtn.addEventListener("click", function() {
     // Remove the alert and uncomment the actual navigation line
-    window.location.href = "https://watch.boldilocks.xyz/";
+    window.location.href = "https://boldilocks.xyz/";
 });
 
 // =========================
