--- a/bigayhilig.html
+++ b/bigayhilig.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bayo</title>
+<title>Bigay Hilig</title>
 <style>
 /* ============================================
    TIMER PAGE STYLES
