--- a/akinanggabi.html
+++ b/akinanggabi.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <meta name="profiton-domain-verification" content="308966d98f7793bf7f8559d44c9a85505ec5195ffdf28f9a22ac1b41a1109f43" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Akin ang Gabi</title>
